--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./assets/fondo1.png);
+  background-image: url(./assets/1269711.jpg);
+  background-size: 100% 100%;
 }
 
 code {
