--- a/src/components/Styles/Card.module.css
+++ b/src/components/Styles/Card.module.css
@@ -5,7 +5,7 @@
     box-shadow: 9px 10px 93px 16px rgba(3, 168, 36, 0.85);
     border: 2px solid rgb(0, 227, 46);
     /* background: rgb(2, 215, 45); */
-    background-image: url(../assets/HD-wallpaper-portal-morty-rick.jpg);
+    background-image: url(/src/assets/HD-wallpaper-portal-morty-rick.jpg);
     background-size: 100% 100%;
     margin: 1%;
     border-radius: 2%;
