--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url(./assets/1269711.jpg);
-  background-size: 100% 100%;
+  background-size: 100%;
 }
 
 code {
