--- a/src/components/Styles/Card.module.css
+++ b/src/components/Styles/Card.module.css
@@ -1,54 +1,114 @@
-.divContainer{
-    width: auto;
-    -webkit-box-shadow: 9px 10px 93px 16px rgba(0,0,0,0.75);
-    -moz-box-shadow: 9px 10px 93px 16px rgba(0,0,0,0.75);
-    box-shadow: 9px 10px 93px 16px rgba(3, 168, 36, 0.85);
-    border: 2px solid rgb(0, 227, 46);
-    /* background: rgb(2, 215, 45); */
-    background-image: url(/src/assets/HD-wallpaper-portal-morty-rick.jpg);
-    background-size: 100% 100%;
-    margin: 1%;
-    border-radius: 2%;
-    border-bottom-left-radius: 10%;
-    border-bottom-right-radius: 10%;
+.divContainer {
+  width: auto;
+  -webkit-box-shadow: 9px 10px 93px 16px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 9px 10px 93px 16px rgba(0, 0, 0, 0.75);
+  box-shadow: 9px 10px 93px 16px rgba(225, 255, 0, 0.85);
+  border: 2px solid rgb(227, 208, 0);
+  background-image: url(/src/assets/portal3.jpg);
+  background-size: 100% 100%;
+  margin: 1%;
+  border-radius: 2%;
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
 }
-.divContainer img{
-    -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 2%;
-    border-bottom-left-radius: 10%;
-    border-bottom-right-radius: 10%;
+.divContainer img {
+  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.75);
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5%;
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
 }
-.boton{
-    display: flex;
-    justify-content: flex-end;
-    border-radius: 20%;
+.divContainer h2 {
+  background: radial-gradient(
+    circle,
+    rgb(225, 255, 0) 0%,
+    rgb(0, 183, 255) 53%
+  );
+  width: 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
-.boton button{
-    box-shadow: none;
-    margin: 2%;
-    border-radius: 15%;
-    border-color: #526E2DFF;
-    background-color: #526E2DFF;
+.info {
+  display: flex;
 }
-.boton button:hover{
-    transition: 0.5s;
-    border-color: #FB6467FF;
-    background-color: #FB6467FF;
-    color: #526E2DFF;
-    color: white;
+.buttonContainer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1%;
 }
-.divContainer h2{
-    font-family: sch;
-    background: linear-gradient(rgb(30, 0, 255), rgb(2, 109, 15));
-    width: 100%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.bn5 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
 }
-.info{
-    display: flex;
+.bn5:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowingbn5 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+@keyframes glowingbn5 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+.bn5:active {
+  color: #000;
+}
+
+.bn5:active:after {
+  background: transparent;
+}
+
+.bn5:hover:before {
+  opacity: 1;
+}
+
+.bn5:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #191919;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
