--- a/src/components/Styles/Nav.module.css
+++ b/src/components/Styles/Nav.module.css
@@ -1,5 +1,34 @@
-.nav{
-    background-color: rgba(0, 255, 55, 0.788);
-    margin: 5px;
-    padding: 1%;
+.nav {
+    background: linear-gradient(180deg,
+            rgba(255, 248, 0, 1) 3%,
+            rgba(183, 0, 255, 0.863) 68%);
+}
+
+.buttons {
+    padding-left: 1.5%;
+    display: flex;
+    align-items: center;
+    padding-top: 2%;
+    margin-left: 50px;
+    font-size: 20px;
+
+}
+
+.bn32 {
+    text-decoration: none;
+    border-color: #ffffff;
+    padding: 0.6em 2.3em;
+    cursor: pointer;
+    font-size: 1em;
+    color: #ffffff;
+    background-image: linear-gradient(45deg, transparent 50%, #ff00d961 50%);
+    background-position: 25%;
+    background-size: 400%;
+    -webkit-transition: background 500ms ease-in-out, color 500ms ease-in-out;
+    transition: 1s
+}
+
+.bn32:hover {
+    color: #ffffff;
+    background-position: 100%;
 }
