--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
+@import url('https://fonts.cdnfonts.com/css/cartoon-free');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'CARTOON FREE', sans-serif;                                           
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./assets/1269711.jpg);
+  background-image: url(./assets/fondo1.png);
   background-size: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'CARTOON FREE', sans-serif;                                           
+
 }
