--- a/src/components/Styles/About.module.css
+++ b/src/components/Styles/About.module.css
@@ -1,3 +1,23 @@
-.prueba {
-    color: red;
+.divContainer {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 50px;
+    background: rgb(255, 248, 0);
+    background: linear-gradient(180deg,
+            rgba(255, 248, 0, 1) 3%,
+            rgba(184, 0, 255, 1) 68%);
+    box-shadow: -41px 41px 82px #bebebe, 41px -41px 82px #ffffff;
+    margin: 50px;
+    text-align: left;
+    width: auto;
+}
+
+.quiensoy {
+    position: relative;
+    left: 2.5%;
+}
+
+.divContainer li {
+    list-style: none;
+
+
 }
