--- a/src/components/Styles/About.module.css
+++ b/src/components/Styles/About.module.css
@@ -1,14 +1,14 @@
 .divContainer {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 50px;
-    background: rgb(255, 248, 0);
-    background: linear-gradient(180deg,
-            rgba(255, 248, 0, 1) 3%,
-            rgba(184, 0, 255, 1) 68%);
-    box-shadow: -41px 41px 82px #bebebe, 41px -41px 82px #ffffff;
+    background: rgba(35,31,87,255);
+    box-shadow: -41px 41px 82px black, 41px -41px 82px rgba(35,31,87,255);
     margin: 50px;
     text-align: left;
     width: auto;
+}
+.divContainer h3,p,ul,li{
+    margin: 10px;
 }
 
 .quiensoy {
@@ -18,6 +18,4 @@
 
 .divContainer li {
     list-style: none;
-
-
 }
